--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -12,15 +12,11 @@
 /*************
 	module
 **************/
-.layout-content > .form{
-	height: auto;
-	margin: 30px auto;
-	padding: 3px 3px;
-}
-
 .form-wapper{
 	@extend .container;
+	@extend .row;
 	margin: 30px auto;
+	padding: 3px 3px;
 }
 
 /*------------------------
@@ -66,6 +62,12 @@
 	event-block group 
 	attributes
 ------------------------*/
+.events-block{
+	@extend .container;
+	@extend .center-block;
+	@extend .row;
+	background-image: url(<%=asset_path("events/bg_swirl.png")%>);
+}
 
 .events--container{
 	@extend .container;
@@ -73,9 +75,12 @@
 	@extend .row;
 }
 .events--theme{
-	@extend .container;
-	@extend .col-md-12;
-	
+	//@extend .container;
+	//@extend .col-md-12;
+	position: absolute;
+	left: 0px;
+	width: 100%;
+	//z-index: -1;
 }
 
 .events > h1{
@@ -111,15 +116,15 @@
 }
 
 .event-block__theme--today{
-	border:3px solid #f8d4d4;
+	border:2px solid #f8d4d4;
 }
 
 .event-block__theme--past{
-	border:3px solid #d1d1e0;
+	border:2px solid #d1d1e0;
 }
 
 .event-block__theme--future{
-	border:3px solid #c1eaff;
+	border:2px solid #c1eaff;
 }
 
 .event-block__top{
