--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -38,6 +38,7 @@
 							<input type="radio" name="tabs" id="tab2" />
 							<label for="tab2"><h5>Updates</h5></label>
 							<div id="tab-content1" class="tab-content">
+								■ 02/18　更新使用者「個人頁面」<br>
 								■ 01/23　新增二手書「排序功能」<br>
 								■ 01/03　新增「最新消息佈告欄」<br>
 								■ 01/03　新增「問題回報」功能<br>
