add import score link

--- a/app/views/scores/import.html.erb
+++ b/app/views/scores/import.html.erb
@@ -1,5 +1,5 @@
 ﻿<div class="bs-callout bs-callout-info well">
-	<h2><%=fa_icon "upload"%>匯入歷年課程</h2>
+	<h2><%=fa_icon "refresh"%>匯入歷年課程</h2>
 	<h4>
 	0.請注意!匯入前會所有課程先<strong>清空!</strong><br>
 	1.至註冊組 <%=link_to "學籍成績系統","https://regist.nctu.edu.tw/", target:"blank"%> 登入<br>
