--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -27,7 +27,7 @@
 				信箱: <%=@user.email%> <br>
 
 				<%=link_to fa_icon("pencil")+"編輯資訊", "/user/edit",class:"" %>
-
+				<%=link_to fa_icon("refresh")+"匯入成績", "/scores/import",class:"" %>
 			</div>
 		</div>
 		<br>
