--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,13 @@
-<button onclick="attend(<%=params[:id]%>);">參加</button>
+<%= stylesheet_link_tag "events", media: "all", "data-turbolinks-track" => true %>
+
+<button  onclick="attend(<%=params[:id]%>);">
+	<% if current_user %>
+		<% if @event.attendances.where(:user_id=>current_user.id).empty?%>參加<%else%>退出<%end%>
+	<% else %>
+		參加
+	<% end %>
+</button>
+
 <div class="row col-md-offset-2">
 	<%=image_tag @event.cover.url, size:"800x400"%>
 	<h4>
@@ -12,17 +21,27 @@
 	</section>
 </div>
 <script>
+	$(document).ready(function(){
+	});
+	
 	function attend(id){
 		$.ajax({
 			type:"POST",
 			url:"/events/attend",
 			data:{
 				event_id: id
-			},
+			},			
 			success:function(data){
-				toastr["info"]("成功");
+				if (data.state == "new")
+					toastr["info"]("已加入活動");
+				else
+					toastr["info"]("已退出活動");
+			},
+			error:function(data){
+				toastr["info"]("錯誤, 請檢查登入");
 			}
-		});
 			
+		});		
 	}
+	
 </script>
