website -> activity website (Events/new)

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -63,7 +63,7 @@
 						<%=f.select :event_type,@event_type_sel,{:prompt=>"必填"},{:class=>"form-control", :required=>"true"}%>
 					</div>
 					-->
-					<label class="col-sm-2 control-label">網址</label>
+					<label class="col-sm-2 control-label">活動網址</label>
 					<div class="col-sm-10">
 						<%=f.text_field :url,:class=>"form-control", :placeholder=>"選填"%>
 					</div>
