--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -66,7 +66,7 @@
 					<div class="banner__inner">
 						<%=image_tag(banner.cover.url, :class => "banner__image", :alt=> "banner", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>					
 						<div class="banner__caption">
-							<strong><%=banner.get_title%></strong>
+							<strong><%= truncate(banner.title, length: 20) %></strong>
 						</div>
 					</div>
 				</div>
@@ -112,9 +112,9 @@
 					<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
 				</div>
 				<div class="event-block__bottom">
-					<small class="event-title text-right"><%=event.get_org%></small>
-					<strong><%=event.get_title%></strong>
-					<small class="event-location"><%=event.get_location%></small>
+					<small class="event-title text-right"><%= truncate(event.organization, length: 5)%></small>
+					<strong><%= truncate(event.title, length: 10) %></strong>
+					<small class="event-location"><%= truncate(event.location, length: 10) %></small>
 				</div>
 			</div>
 			<% end %>
@@ -130,7 +130,7 @@
 		<h3>我的活動</h3>
 		<% if current_user %>
 			<% current_user.attend_events.each do |myEvent| %>
-				<%=link_to myEvent.get_title, "/events/"+myEvent.id.to_s %>
+				<%=link_to truncate(myEvent.title, length:10 ), "/events/"+myEvent.id.to_s %>
 			<% end %>
 		<% end %>
 	</nav>
