change to container-fluid

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,6 +5,7 @@
 		$('.carousel').carousel({
 			interval: 5000
 		});
+		$("#content-container").attr("class","container-fluid");
 		
 		$('#banner-0').addClass('active');
 		
