--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 <% if current_page?('/')||current_page?('/main/index')||current_page?('/login')%>
 	<%= yield %>
 <% else %>
-	<div id="content-contaier" class="container" style="margin-top:60px; margin-bottom:50px;min-height:100vh;" >
+	<div id="content-container" class="container" style="margin-top:60px; margin-bottom:50px;min-height:100vh;" >
 		<%= yield %>
 	</div>
 <% end %>
