--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -5,7 +5,7 @@
 	layout
 *************/
 .layout-content{
-	@extend .container;
+	@extend .container-fluid;
 	@extend .center-block;
 	background-color: rgba(200, 200, 200, 0.8);
 }
@@ -73,7 +73,7 @@
 ------------------------*/
 
 .events-block{
-	@extend .container;
+	@extend .container-fluid;
 	margin: 20px 0px; 
 }
 
@@ -86,7 +86,7 @@
 }
 
 .events--container{
-	@extend .container;
+	@extend .container-fluid;
 }
 .events--theme{
 	position: absolute;
