typo, wapper => wrapper

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -59,24 +59,24 @@
 	form
 ------------------------*/
 
-.form-wapper{
+.form-wrapper{
 	margin: 40px auto;
     padding: 30px 3px;
     height: 100px;
 	background-color: rgba(100, 100, 100, 0.7);
 }
 
-.form-button-wapper{
+.form-button-wrapper{
 	@extend .col-md-1, .col-sm-2, .col-xs-6;
 	padding: 3px auto;
 }
 
-.form-text-wapper{
+.form-text-wrapper{
 	@extend .col-md-8, .col-sm-8, .col-xs-12;
 	padding: 3px auto;
 }
 
-.form-nav-button-wapper{
+.form-nav-button-wrapper{
 	@extend .col-md-2, .col-sm-12, .col-xs-12;
 	padding: 3px auto;
 }
@@ -127,7 +127,7 @@
 	event-block 
 	attributes
 ------------------------*/
-.event-block-wapper{
+.event-block-wrapper{
 	@extend .col-md-3, .col-sm-6, .col-xs-12;
 	margin: 10px 0px;
 	padding: 0px;
